--- a/packages/modular-rest/package.json
+++ b/packages/modular-rest/package.json
@@ -2,9 +2,11 @@
   "name": "modular-rest",
   "version": "2.0.0",
   "description": "a nodejs module based on KOAJS for developing Rest-APIs in a modular solution.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "run": "tsc && node dist/index.js",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -25,5 +27,11 @@
   "dependencies": {
     "koa": "^2.5.3",
     "koa-router": "^7.4.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.0.2",
+    "@types/node": "^14.6.4",
+    "@types/koa": "^2.5.3",
+    "@types/koa-router": "^7.4.0"
   }
 }
