--- a/packages/modular-rest/package.json
+++ b/packages/modular-rest/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "colog": "^1.0.4",
     "file-system": "^2.2.2",
+    "generate-rsa-keypair": "^0.2.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.5.3",
     "koa-body": "^4.2.0",
