--- a/packages/web-client/package.json
+++ b/packages/web-client/package.json
@@ -30,5 +30,8 @@
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5",
     "xmlhttprequest-ts": "^1.0.1"
+  },
+  "dependencies": {
+    "ts-bus": "^2.3.1"
   }
 }
