--- a/packages/modular-rest/package.json
+++ b/packages/modular-rest/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/navidshad/modular-rest#readme",
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "colog": "^1.0.4",
     "file-system": "^2.2.2",
     "generate-rsa-keypair": "^0.2.1",
