--- a/packages/web-client/package.json
+++ b/packages/web-client/package.json
@@ -27,13 +27,15 @@
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.5",
-    "xmlhttprequest-ts": "^1.0.1"
+    "typescript": "^4.0.5"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "ts-bus": "^2.3.1"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "types": "dist/index.d.ts",
   "main": "dist/index.js"
 }
