--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@modular-rest/server",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "a nodejs module based on KOAJS for developing Rest-APIs in a modular solution.",
   "main": "src/index.js",
   "scripts": {
@@ -31,7 +31,7 @@
     "koa": "^2.5.3",
     "koa-body": "^4.2.0",
     "koa-router": "^7.4.0",
-    "koa-static": "^5.0.0",
+    "koa-static-server": "^1.5.2",
     "mongoose": "^5.10.9",
     "nested-property": "^4.0.0"
   },
