--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@modular-rest/client",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "This is a browser library for using modular-rest server abilities on client side.",
   "scripts": {
     "test": "mocha -r ts-node/register src/**/*.spec.ts",
@@ -26,8 +26,7 @@
     "nodemon": "^2.0.6",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "ts-node": "^9.0.0"
   },
   "dependencies": {
     "axios": "^0.21.0",
