--- a/docs/package.json
+++ b/docs/package.json
@@ -1,19 +1,10 @@
 {
-  "name": "mrest",
-  "version": "0.0.1",
-  "description": "this is the documentation of mrest pachages",
-  "main": "index.js",
-  "authors": {
-    "name": "Navid",
-    "email": "navidshad72@gmail.com"
-  },
-  "repository": "https://github.com/navidshad/modular-rest/mrest",
   "scripts": {
-    "dev": "vuepress dev src",
-    "build": "vuepress build src"
+    "docs:dev": "vitepress dev",
+    "docs:build": "vitepress build",
+    "docs:preview": "vitepress preview"
   },
-  "license": "MIT",
   "devDependencies": {
-    "vuepress": "^1.5.3"
+    "vitepress": "^1.0.0-rc.10"
   }
 }
