--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -39,13 +39,12 @@ jobs:
         with:
           node-version: 18
           cache: npm # or pnpm / yarn
+          cache-dependency-path: ./docs/package-lock.json # or ./pnpm-lock.yaml / ./yarn.lock
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Install dependencies
-        working-directory: ./docs
         run: npm ci # or pnpm install / yarn install / bun install
       - name: Build with VitePress
-        working-directory: ./docs
         run: |
           npm run docs:build # or pnpm docs:build / yarn docs:build / bun run docs:build
           touch docs/.vitepress/dist/.nojekyll
