--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -44,11 +44,11 @@ jobs:
         uses: actions/configure-pages@v3
       - name: Install dependencies
         working-directory: ./docs
-        run: npm ci # or pnpm install / yarn install / bun install
+        run: yarn install
       - name: Build with VitePress
         working-directory: ./docs
         run: |
-          npm run docs:build # or pnpm docs:build / yarn docs:build / bun run docs:build
+          yarn docs:build # or pnpm docs:build / yarn docs:build / bun run docs:build
           touch docs/.vitepress/dist/.nojekyll
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
