--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@modular-rest/server",
-  "version": "1.6.6",
+  "version": "1.7.0",
   "description": "a nodejs module based on KOAJS for developing Rest-APIs in a modular solution.",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "generate:types": "tsc"
   },
+  "types": "./types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/navidshad/modular-rest.git"
@@ -35,5 +37,8 @@
     "mongoose": "^5.10.9",
     "nested-property": "^4.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/koa": "^2.14.0",
+    "typescript": "^5.3.3"
+  }
 }
