--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,8 +32,9 @@
     "keypair": "^1.0.4",
     "koa": "^2.5.3",
     "koa-body": "^4.2.0",
+    "koa-mount": "^4.0.0",
     "koa-router": "^7.4.0",
-    "koa-static-server": "^1.5.2",
+    "koa-static": "^5.0.0",
     "mongoose": "^5.10.9",
     "nested-property": "^4.0.0"
   },
