--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -49,6 +49,7 @@ jobs:
         working-directory: ./docs
         run: |
           yarn docs:build # or pnpm docs:build / yarn docs:build / bun run docs:build
+          cp assets .vitepress/dist/assets -r
           touch .vitepress/dist/.nojekyll
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
