--- a/packages/server-ts/package.json
+++ b/packages/server-ts/package.json
@@ -8,7 +8,7 @@
 		"build": "tsc",
 		"dev": "tsc --watch",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"play": "tsc src/play-test.ts"
+		"play": "tsc -p tsconfig.json && node dist/play-test.js"
 	},
 	"repository": {
 		"type": "git",
