--- a/packages/server-ts/.gitignore
+++ b/packages/server-ts/.gitignore
@@ -75,7 +75,7 @@ typings/
 # Nuxt.js build / generate output
 .nuxt
 dist
-
+docs/generated
 # Gatsby files
 .cache/
 # Comment in the public line in if your project uses Gatsby and *not* Next.js
