Finally a proper basic version of docs generator

--- a/docs-generator/.gitignore
+++ b/docs-generator/.gitignore
@@ -1,22 +1,21 @@
 # Dependencies
 node_modules/
+yarn-debug.log*
+yarn-error.log*
 
 # Build output
 dist/
+build/
+
+# Generated documentation
 docs/
+generated-docs/
 
 # IDE files
-.vscode/
 .idea/
-
-# Logs
-*.log
-npm-debug.log*
-
-# Environment variables
-.env
-.env.local
-.env.*.local
+.vscode/
+*.swp
+*.swo
 
 # OS files
 .DS_Store
