--- a/docs-generator/tsconfig.json
+++ b/docs-generator/tsconfig.json
@@ -3,17 +3,14 @@
 		"target": "ES2020",
 		"module": "commonjs",
 		"lib": ["ES2020"],
-		"declaration": true,
 		"outDir": "./dist",
 		"rootDir": "./src",
 		"strict": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
-		"moduleResolution": "node",
-		"resolveJsonModule": true,
-		"types": ["node"]
+		"resolveJsonModule": true
 	},
 	"include": ["src/**/*"],
-	"exclude": ["node_modules", "dist"]
+	"exclude": ["node_modules", "dist", "docs"]
 }
