--- a/packages/server-ts/package.json
+++ b/packages/server-ts/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@modular-rest/server-ts",
-	"version": "1.0.0",
+	"name": "@modular-rest/server",
+	"version": "1.11.13",
 	"description": "TypeScript version of a nodejs module based on KOAJS for developing Rest-APIs in a modular solution.",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
