Update GitHub Actions workflow and package.json build script
- Commented out the push trigger for the GitHub Actions workflow to prevent automatic deployments on main branch pushes.
- Simplified the build script in package.json by removing the rimraf command, allowing TypeScript to handle the build process directly.

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,7 +6,7 @@
     "test": "mocha -r ts-node/register src/**/*.spec.ts",
     "coverage": "nyc -r lcov -e .ts -x \"*.spec.ts\" npm run test",
     "start:dev": "nodemon",
-    "build": "rimraf ./dist && tsc"
+    "build": "tsc"
   },
   "keywords": [
     "modular-rest",
