chore(release): update semantic-release configuration for npm publishing
- Added npmPublish, allowSameVersion, and force options to .releaserc.json for both client and server-ts packages.
- Updated GitHub Actions workflow to configure git user for semantic-release execution.

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -64,14 +64,20 @@
 			"@semantic-release/npm",
 			{
 				"pkgRoot": "packages/client",
-				"tarballDir": "dist"
+				"tarballDir": "dist",
+				"npmPublish": true,
+				"allowSameVersion": false,
+				"force": false
 			}
 		],
 		[
 			"@semantic-release/npm",
 			{
 				"pkgRoot": "packages/server-ts",
-				"tarballDir": "dist"
+				"tarballDir": "dist",
+				"npmPublish": true,
+				"allowSameVersion": false,
+				"force": false
 			}
 		],
 		[
