--- a/.releaserc.json
+++ b/.releaserc.json
@@ -67,7 +67,8 @@
 				"tarballDir": "dist",
 				"npmPublish": true,
 				"allowSameVersion": false,
-				"force": false
+				"force": false,
+				"tagFormat": "@modular-rest/client_v${version}"
 			}
 		],
 		[
@@ -77,7 +78,8 @@
 				"tarballDir": "dist",
 				"npmPublish": true,
 				"allowSameVersion": false,
-				"force": false
+				"force": false,
+				"tagFormat": "@modular-rest/server_v${version}"
 			}
 		],
 		[
