--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@semantic-release/github": "^11.0.1",
 		"@semantic-release/npm": "^12.0.1",
 		"@semantic-release/release-notes-generator": "^14.0.3",
-		"semantic-release": "^24.2.3"
+		"semantic-release": "^24.2.3",
+		"semantic-release-monorepo": "8.0.2"
 	}
 }
