chore: update Node.js version and caching method in workflows
- Changed Node.js version from 18 to 21.5.0 in the GitHub Actions workflow.
- Updated caching method from npm to yarn for improved dependency management.
- Updated .nvmrc file to reflect the new Node.js version.

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -40,8 +40,8 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 18
-          cache: npm # or pnpm / yarn
+          node-version: 21.5.0
+          cache: yarn
           cache-dependency-path: ./docs
 
       - name: Setup Pages
