chore: update Node.js version and workflow configuration in GitHub Actions
- Changed Node.js version from 20.0.0 to 21.5.0 for the server and client setup.
- Added a separate Node.js setup step for documentation with version 20.0.0.
- Updated cache dependency paths for improved organization in the workflow.

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -37,12 +37,12 @@ jobs:
       # - uses: pnpm/action-setup@v2 # Uncomment this if you're using pnpm
       # - uses: oven-sh/setup-bun@v1 # Uncomment this if you're using Bun
 
-      - name: Setup Node
+      - name: Setup Node Server and Client
         uses: actions/setup-node@v3
         with:
-          node-version: 20.0.0
+          node-version: 21.5.0
           cache: yarn
-          cache-dependency-path: ./docs
+          cache-dependency-path: ./packages/server-ts
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -52,6 +52,13 @@ jobs:
         run: |
           yarn install
           yarn docs
+
+      - name: Setup Node for docs
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.0.0
+          cache: yarn
+          cache-dependency-path: ./docs
 
       - name: Install vitepress dependencies
         working-directory: ./docs
