docs: update navigation and configuration for improved clarity
- Updated the main index to change "AI Prompt" to "AI Context" for better alignment with documentation content.
- Modified the VitePress configuration to rename "Server TS" to "Server" and commented out the obsolete server section to streamline the navigation structure.
- Adjusted GitHub Actions workflow by commenting out cache dependency paths for improved organization.

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -42,7 +42,7 @@ jobs:
         with:
           node-version: 21.5.0
           cache: yarn
-          cache-dependency-path: ./packages/server-ts
+          # cache-dependency-path: ./packages/server-ts
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -58,7 +58,7 @@ jobs:
         with:
           node-version: 20.0.0
           cache: yarn
-          cache-dependency-path: ./docs
+          # cache-dependency-path: ./docs
 
       - name: Install vitepress dependencies
         working-directory: ./docs
