refactor: update CMS trigger context to use DatabaseTriggerContext and enhance database trigger context properties

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -23,6 +23,10 @@
 						"release": "patch"
 					},
 					{
+						"type": "refactor",
+						"release": "patch"
+					},
+					{
 						"type": "perf",
 						"release": "patch"
 					},
