--- a/packages/server-ts/package.json
+++ b/packages/server-ts/package.json
@@ -27,7 +27,7 @@
 	"bugs": {
 		"url": "https://github.com/modular-rest/modular-rest/issues"
 	},
-	"homepage": "https://github.com/modular-rest/modular-rest#readme",
+	"homepage": "https://modular-rest.github.io/modular-rest",
 	"dependencies": {
 		"@koa/cors": "^3.1.0",
 		"colog": "^1.0.4",
