feat: #86ew1dm4m add test coverage scripts and update GitHub workflows
- Added `test:coverage` script to `package.json` files for both client and server packages to facilitate coverage reporting.
- Updated GitHub Actions workflows to trigger on successful completion of the "Tests" workflow, ensuring releases and documentation deployments are only executed after tests pass.

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -3,10 +3,11 @@
 name: Deploy VitePress site to Pages
 
 on:
-  # Runs on pushes targeting the `main` branch. Change this to `master` if you're
-  # using the `master` branch as the default branch.
-  # push:
-  #   branches: [main]
+  workflow_run:
+    workflows: ["Tests"]
+    branches: [main]
+    types:
+      - completed
   release:
     types: [published]
 
@@ -29,10 +30,12 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    if: ${{ github.event_name != 'workflow_run' || github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
+          ref: ${{ github.event.workflow_run.head_sha || github.ref }}
           fetch-depth: 0 # Not needed if lastUpdated is not enabled
       # - uses: pnpm/action-setup@v2 # Uncomment this if you're using pnpm
       # - uses: oven-sh/setup-bun@v1 # Uncomment this if you're using Bun
