--- a/packages/server-ts/package.json
+++ b/packages/server-ts/package.json
@@ -59,6 +59,7 @@
 		"jest": "30.2.0",
 		"mongodb-memory-server": "11.0.1",
 		"supertest": "7.1.4",
+		"@types/supertest": "^6.0.2",
 		"ts-jest": "29.4.6",
 		"typedoc": "^0.28.1",
 		"typedoc-plugin-markdown": "^4.6.0",
