chore: #86ew1dm4m update GitHub Actions workflows to use .nvmrc for Node.js versioning
- Changed Node.js version specification in the workflows to reference the .nvmrc file located in packages/server-ts.
- Updated caching strategy for yarn in both docs and release workflows.

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -43,9 +43,8 @@ jobs:
       - name: Setup Node Server and Client
         uses: actions/setup-node@v3
         with:
-          node-version: 21.5.0
-          cache: yarn
-          # cache-dependency-path: ./packages/server-ts
+          node-version-file: "packages/server-ts/.nvmrc"
+          cache: "yarn"
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -59,9 +58,8 @@ jobs:
       - name: Setup Node for docs
         uses: actions/setup-node@v3
         with:
-          node-version: 20.0.0
-          cache: yarn
-          # cache-dependency-path: ./docs
+          node-version-file: "packages/server-ts/.nvmrc"
+          cache: "yarn"
 
       - name: Install vitepress dependencies
         working-directory: ./docs
